Added QL-1100 and siblings + the wider format supported by QL-1100 and QL-1100NWB (#18)
Co-authored-by: Oskar Flordal <oskar.flordal@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,10 @@ keywords = [
     "QL-810W",
     "QL-820NWB",
     "QL-1050",
-    "QL-1060N"
+    "QL-1060N",
+    "QL-1100",
+    "QL-1100NWB",
+    "QL-1115NWB",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
